# Jaraffe-Library

./: .editorconfig  .editorconfig.inferred  .gitattributes  .gitignore  CMakeLists.txt  Common.props  JFL.sln  LICENSE  MakeSolutionForStaticLibraryByCMake.bat  README.md
JFL/: CMakeLists.txt  JFInclude.h  JFL.h  JFL.props  JFL.vcxproj  JFL.vcxproj.filters
JFL/Application/: JFApplication.cpp  JFApplication.h  JFApplicationContextInterface.h
JFL/Application/Private/: ApplicationPlatform.h
JFL/Application/Private/Cocoa/: ApplicationContext.h  ApplicationContext.m
JFL/Application/Private/CocoaTouch/: ApplicationContext.h  ApplicationContext.m
JFL/Application/Private/Win32/: ApplicationContext.cpp  ApplicationContext.h
JFL/Container/: JFArray.h  JFContainer.h
JFL/FileSystem/: JFDirectory.cpp  JFDirectory.h  JFFile.cpp  JFFile.h  JFFileSystem.h
JFL/Graphics/: JFBlendState.h  JFCamera.cpp  JFCamera.h  JFColor32.h  JFCommandBuffer.h  JFCommandList.h  JFCommandQueue.h  JFCopyCommandEncoder.h  JFGPUBuffer.h  JFGraphics.h  JFGraphicsDevice.cpp  JFGraphicsDevice.h  JFLinearColor.cpp  JFLinearColor.h  JFPixelFormat.h  JFRenderCommandEncoder.h  JFRenderPipeline.h  JFShader.h  JFSwapChain.h  JFTexture.h  JFVertexDescriptor.h  JFViewport.h
JFL/Graphics/Private/: GraphicsAPI.h
JFL/Graphics/Private/Direct3D12/: CommandAllocator.cpp  CommandAllocator.h  CommandBuffer.cpp  CommandBuffer.h  CommandList.cpp  CommandList.h  CommandQueue.cpp  CommandQueue.h  CopyCommandEncoder.cpp  CopyCommandEncoder.h  GPUBuffer.cpp  GPUBuffer.h  GraphicsDevice.cpp  (+14 more)
JFL/JFL.xcodeproj/: project.pbxproj
JFL/Lock/: JFCondition.cpp  JFCondition.h  JFDummyLock.h  JFLock.h  JFMutex.cpp  JFMutex.h  JFRecursiveMutex.cpp  JFRecursiveMutex.h  JFScopedLock.h  JFSharedMutex.cpp  JFSharedMutex.h  JFSpinLock.cpp  JFSpinLock.h
JFL/Log/: JFLog.cpp  JFLog.h  JFLogVariant.cpp  JFLogVariant.h
JFL/Math/: JFAffineTransform2.h  JFAffineTransform2.inl  JFAffineTransform3.h  JFAffineTransform3.inl  JFCoordinateConverter.h  JFLinearTransform2.h  JFLinearTransform2.inl  JFLinearTransform3.h  JFLinearTransform3.inl  JFMath.h  JFMatrix2.h  JFMatrix2.inl  JFMatrix3.h  JFMatrix3.inl  JFMatrix4.h  JFMatrix4.inl  JFPoint.h  JFQuaternion.cpp  JFQuaternion.h  JFQuaternion.inl  JFRect.h  JFSize.h  JFVector2.h  JFVector2.inl  JFVector3.h  JFVector3.inl  JFVector4.h  JFVector4.inl
JFL/Memory/: JFMemory.h
JFL/Object/: JFObject.h  JFRefCounter.cpp  JFRefCounter.h
JFL/String/: JFString.h  JFStringA.cpp  JFStringA.h  JFStringFormat.cpp  JFStringFormat.h  JFStringW.cpp  JFStringW.h
JFL/Type/: JFFunction.h  JFPrimitiveVariant.cpp  JFPrimitiveVariant.h  JFTuple.h  JFType.h  JFTypeTraits.h  JFTypeTuple.h  JFTypes.h
JFL/Window/: JFVirtualKeyCode.h  JFWindow.cpp  JFWindow.h  JFWindowContextInterface.h  JFWindowDescriptor.h  JFWindowEvent.h
JFL/Window/Private/: WindowPlatform.h
UnitTest/: CMakeLists.txt  JFApplicationDump.dmp  UnitTest.vcxproj  UnitTest.vcxproj.filters  main.cpp
UnitTest/Application/: Application.cpp
UnitTest/Math/: AffineTransform.cpp  Include.h  LinearTransform.cpp  Matrix.cpp  Vector.cpp
UnitTest/Resource/: SimpleShader.hlsl
UnitTest/Resource/Shaders/: Default.hlsl  LightingUtil.hlsl
UnitTest/UnitTest.xcodeproj/: project.pbxproj
(+66 files in other folders)
